# particletest

./: CMakeLists.txt
asset/: recipe
asset/shader/gl/: clear.comp  particle.frag  particle.vert  process.comp  process.frag  process.vert
src/: Renderer.cpp  Renderer.hpp  main.cpp
win/include/win/gl/: GL.hpp
win/src/gl/: GL.cpp
